<resources>
    <string name="app_name">MoexFilm</string>
    <string name="signIn_text">Iniciar Sesión</string>
    <string name="register_text">Registrarse</string>
    <string name="signInGoogle_text">Iniciar Sesión con Google</string>
    <string name="email_text">Email</string>
    <string name="password_text">Contraseña</string>
    <string name="confirmPassword_text">Confirmar Contraseña</string>
    <string name="signInYourAccount_text">Ingrese a su cuenta</string>
    <string name="otherSignIn_text">O inicia sesión con</string>
    <string name="account_text">Tienes cuenta?</string>
    <string name="noAccount_text">No tienes cuenta?</string>
    <string name="createAccount_text">Crea tu cuenta</string>
    <string name="oauth_client" translatable="false">908879042178-aodqmho8411tejpk7bo00r9rdlof53op.apps.googleusercontent.com</string>
    <string name="oauth_secret" translatable="false">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</string>
    <string name="signIn_error">error al iniciar sesión</string>
    <string name="register_error">error al registrarse</string>
    <string name="invalidEmail_error">El email no es valido</string>
    <string name="passwordMatch_error">las contraseñas no coinciden</string>
    <string name="fieldEmpty_error">Rellena este campo</string>
    <string name="passwordLength_error">la contraseña tiene contener como minimo 6 caracteres</string>
    <string name="home">Inicio</string>
    <string name="favorite">Favoritos</string>
    <string name="search">Buscar</string>
    <string name="libraries">Bibliotecas</string>
    <string name="profile">Perfil</string>
    <string name="add_text">Añadir</string>
    <string name="baseErrorRetry_error">Ha ocurrido un error reintetelo mas tarde</string>
    <string name="noLibraries_text">No hemos encontrado\n bibliotecas. ¡Prueba a\n añadir a una! </string>
    <string name="noMovies_text">No hemos encontrado\n bibliotecas de peliculas. ¡Prueba a\n añadir a una! </string>
    <string name="noDriveScope_error">Tienes que aceptar los permisos de Drive para poder usar la aplicación</string>
    <string name="selectFolder_text">Selecciona una carpeta</string>
    <string name="select_text">Seleccionar</string>
    <string name="movies_text">Peliculas</string>
    <string name="tvShows_text">Series</string>
    <string name="createLibrary_text">Crea tu Biblioteca</string>
    <string name="selectFolderBtn_text">Seleccionar carpeta</string>
    <string name="noFolderSelected_text">Ninguna carpeta seleccionada</string>
    <string name="finish_text">Terminar</string>
    <string name="name_text">Nombre</string>
    <string name="scanningLibraries_error">Error escaneando la biblioteca %s</string>
    <string name="loadingFolders_url">https://assets3.lottiefiles.com/packages/lf20_qcdpfl7i.json</string>
    <string name="wait_text">Espera mientras obtenemos\n las carpetas</string>
    <string name="noFolderSelected_error">No has seleccionado ninguna carpeta</string>
    <string name="play_text">Reproducir</string>
    <string name="video_text">VIDEO</string>
    <string name="genero_text">GENERO</string>
    <string name="cast_text">REPARTO</string>
    <string name="season_text">Temporada %s</string>
    <string name="fileName_text">NOMBRE DEL ARCHIVO</string>
    <string name="scanningLibrary_text">Escaneando %s</string>
    <string name="noSeasons_text">No hay temporadas</string>
    <string name="playNow_text">Reproducir ahora</string>
    <string name="profile_text">Perfil</string>
    <string name="singOut_text">Cerrar sesión</string>
    <string name="libraries_scanned_text">Bibliotecas Escaneadas</string>
    <string name="movies_scanned_text">Peliculas Escaneadas</string>
    <string name="tvShows_scanned_text">Series Escaneadas</string>
    <string name="accessToken_error">Error al obtener el token de acceso</string>
</resources>